--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
         <script type="text/javascript" src="phonegap.js"></script>
         <script type="text/javascript" src="js/jquery.min.js"></script>
         <script type="text/javascript" src="js/storage.js"></script>
+        <script type="text/javascript" src="LocalNotification.js"></script>
         
         
         <script type="text/javascript" src="js/bootstrap.min.js"></script>
